<resources>
    <string name="app_name">FirstAplication</string>
    <string name="two">Two</string>
    <string name="button">Change</string>
    <string name="one">One</string>
    <string name="button1">HW1</string>
    <string name="button2">HW2</string>
    <string name="button3">HW3</string>
    <string name="button4_1">HW4_1</string>
    <string name="button4_2">HW4_2</string>
    <string name="button5">HW5</string>
    <string name="button6">HW6</string>
    <string name="button7">HW7</string>
    <string name="button7v2">HW7v2</string>
    <string name="button8">HW8</string>


    <string name="button3A">Download</string>

    <string name="textview">TextView</string>
    <string name="edittext">EditText</string>
    <string name="textview3">Past url link</string>
    <string name="urlpicture">https://clips-zone.ru/content/images/albums/2/album_300_590e95bd-8218-4357-8593-0a1dc317a4b5.jpg</string>
    <string name="addlinkButton3A">Autolink</string>
    <string name="button6A">Click</string>

</resources>
