<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/mainBackround"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button1"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top|center"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button4_1"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="113dp"
        android:text="@string/button4_1" />

    <Button
        android:id="@+id/button4_2"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button4_1"
        android:text="@string/button4_2" />

    <Button
        android:id="@+id/button5"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button4_1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top|center"
        android:text="@string/button5" />

    <Button
        android:id="@+id/button6"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button4_1"
        android:layout_gravity="top|center"
        android:text="@string/button6" />

    <Button
        android:id="@+id/button7"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button4_2"
        android:layout_marginTop="12dp"
        android:text="@string/button7" />
</RelativeLayout>
