<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/one"
        android:textColor="@color/textonecolor"
        android:layout_weight="1"
        android:layout_margin="12dp"
        android:gravity="center"
        android:textSize="35dp"
        android:text="@string/one" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/two"
        android:textColor="@color/texttwocolor"
        android:layout_weight="1"
        android:layout_margin="12dp"
        android:gravity="center"
        android:textSize="35dp"
        android:text="@string/two" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_margin="12dp"
        android:background="@color/button"
        android:gravity="center"
        android:textSize="35dp"
        android:text="@string/button" />


</LinearLayout>
